--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             customer and know minimum number of notes to return.
         </p>
         <label for="bill-amount">Bill Amount:</label>
-        <input id="bill-amount" type="text" />
+        <input id="bill-amount" type="number" placeholder="Enter Bill Amount"/>
         <label for="cash-given">Cash Given</label>
-        <input id="cash-given" type="text" />
+        <input id="cash-given" type="number" placeholder="Enter Bill Amount"/>
         <button id="check-button">Check</button>
         <p id="error-message"></p>
         <table class="change-table">
