--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1 class="heading">Cash Register Manager</h1>
         <p class="description">
-            Enter the bi amount and cash given by the 
+            Enter the bill amount and cash given by the 
             customer and know minimum number of notes to return.
         </p>
         <label for="bill-amount">Bill Amount:</label>
